[package]
name = "snarkvm-circuit-collections"
version = "4.5.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Collections circuit library for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2024"

[dependencies.snarkvm-console-collections]
workspace = true

[dependencies.snarkvm-circuit-algorithms]
workspace = true

[dependencies.snarkvm-circuit-types]
workspace = true

[dev-dependencies.snarkvm-circuit-network]
path = "../network"

[dev-dependencies.snarkvm-console-algorithms]
workspace = true

[dev-dependencies.snarkvm-console-network]
workspace = true

[dev-dependencies.snarkvm-utilities]
workspace = true

[dev-dependencies.anyhow]
workspace = true
