[package]
name = "snarkvm-circuit-environment"
version = "4.1.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Circuit environment for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
# Upgrade to Rust 2024 when once we deal with std::env::set_var
edition = "2021"

[[bench]]
name = "linear_combination"
path = "benches/linear_combination.rs"
harness = false

[dependencies.snarkvm-console-network]
workspace = true

[dependencies.snarkvm-algorithms]
workspace = true

[dependencies.snarkvm-circuit-environment-witness]
workspace = true

[dependencies.snarkvm-curves]
workspace = true

[dependencies.snarkvm-fields]
workspace = true

[dependencies.snarkvm-utilities]
workspace = true

[dependencies.indexmap]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.nom]
workspace = true

[dependencies.num-traits]
workspace = true

[dependencies.sha2]
workspace = true
optional = true

[dependencies.smallvec]
workspace = true

[dev-dependencies.snarkvm-algorithms]
workspace = true
features = [ "test" ]

[dev-dependencies.snarkvm-circuit]
workspace = true

[dev-dependencies.snarkvm-console-types]
workspace = true

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.serial_test]
workspace = true

[features]
save_r1cs_hashes = [ "dep:sha2" ] # used in regression-checking
dev-print = [ "snarkvm-utilities/dev-print" ]
