[package]
name = "snarkvm-circuit-network"
version = "4.4.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Network circuit library for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2024"

[dependencies.snarkvm-console-network]
workspace = true

[dependencies.snarkvm-circuit-algorithms]
workspace = true

[dependencies.snarkvm-circuit-collections]
workspace = true

[dependencies.snarkvm-circuit-types]
workspace = true

[dev-dependencies.snarkvm-console-types]
workspace = true

[features]
wasm = [ "snarkvm-console-network/wasm" ]
