[package]
name = "snarkvm-circuit-program"
version = "4.2.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Program circuit library for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2024"

[dependencies.snarkvm-console-program]
workspace = true

[dependencies.snarkvm-circuit-account]
workspace = true

[dependencies.snarkvm-circuit-algorithms]
workspace = true

[dependencies.snarkvm-circuit-collections]
workspace = true

[dependencies.snarkvm-circuit-network]
workspace = true

[dependencies.snarkvm-circuit-types]
workspace = true

[dependencies.snarkvm-utilities]
workspace = true

[dev-dependencies.snarkvm-console]
workspace = true
features = [ "network", "types" ]

[dev-dependencies.snarkvm-console-program]
workspace = true
features = [ "test" ]

[dev-dependencies.snarkvm-console-account]
workspace = true

[dev-dependencies.anyhow]
workspace = true

[dev-dependencies.rand]
workspace = true

[features]
dev-print = [ "snarkvm-utilities/dev-print" ]
