[package]
name = "snarkvm-circuit-types"
version = "3.8.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Primitive circuit for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2021"

[dependencies.snarkvm-circuit-environment]
workspace = true

[dependencies.snarkvm-circuit-types-address]
workspace = true

[dependencies.snarkvm-circuit-types-boolean]
workspace = true

[dependencies.snarkvm-circuit-types-field]
workspace = true

[dependencies.snarkvm-circuit-types-group]
workspace = true

[dependencies.snarkvm-circuit-types-integers]
workspace = true

[dependencies.snarkvm-circuit-types-scalar]
workspace = true

[dependencies.snarkvm-circuit-types-string]
workspace = true

[dev-dependencies.snarkvm-console]
workspace = true
features = [ "default" ]
