[package]
name = "snarkvm-console-algorithms"
version = "4.3.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Console algorithms for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2024"

[[bench]]
name = "bhp"
path = "benches/bhp.rs"
harness = false

[[bench]]
name = "ecdsa"
path = "benches/ecdsa.rs"
harness = false

[[bench]]
name = "elligator2"
path = "benches/elligator2.rs"
harness = false

[[bench]]
name = "keccak"
path = "benches/keccak.rs"
harness = false

[[bench]]
name = "poseidon"
path = "benches/poseidon.rs"
harness = false

[dependencies.snarkvm-console-types]
workspace = true
features = [ "field", "group", "integers", "scalar" ]

[dependencies.snarkvm-fields]
workspace = true

[dependencies.snarkvm-utilities]
workspace = true

[dependencies.blake2s_simd]
version = "1.0"

[dependencies.hex]
version = "0.4"

[dependencies.k256]
version = "0.13"
features = [ "digest", "ecdsa" ]
default-features = false

[dependencies.smallvec]
workspace = true
features = [ "const_generics", "const_new" ]

[dependencies.tiny-keccak]
version = "2"
features = [ "keccak", "sha3" ]

[dev-dependencies.snarkvm-curves]
workspace = true

[dev-dependencies.bincode]
workspace = true

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.expect-test]
workspace = true

[dev-dependencies.hex]
workspace = true

[dev-dependencies.serde]
workspace = true

[dev-dependencies.serde_json]
workspace = true
features = [ "preserve_order" ]

[features]
dev-print = [ "snarkvm-utilities/dev-print" ]
