[package]
name = "snarkvm-console-collections"
version = "4.1.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Collections for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2024"

[[bench]]
name = "kary_merkle_tree"
path = "benches/kary_merkle_tree.rs"
harness = false

[[bench]]
name = "merkle_tree"
path = "benches/merkle_tree.rs"
harness = false

[dependencies.snarkvm-console-algorithms]
workspace = true

[dependencies.snarkvm-console-types]
workspace = true
features = [ "field", "integers" ]

[dependencies.aleo-std]
workspace = true

[dependencies.rayon]
workspace = true

[dev-dependencies.snarkvm-console-network]
workspace = true

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.indexmap]
workspace = true

[features]
serial = [ ]
timer = [ "aleo-std/timer" ]
