[package]
name = "snarkvm-console-network"
version = "4.0.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Network console library for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2021"

[features]
default = [ "snarkvm-algorithms/polycommit_full" ]
wasm = [
  "snarkvm-algorithms/polycommit_wasm",
  "snarkvm-parameters/wasm"
]
test = [ ]
test_targets = [ ]
test_consensus_heights = [ ]

[dependencies.snarkvm-algorithms]
path = "../../algorithms"
version = "=4.0.0"
default-features = false
features = [ "snark" ]

[dependencies.snarkvm-console-algorithms]
path = "../algorithms"
version = "=4.0.0"

[dependencies.snarkvm-console-collections]
path = "../collections"
version = "=4.0.0"

[dependencies.snarkvm-console-network-environment]
path = "./environment"
version = "=4.0.0"

[dependencies.snarkvm-console-types]
path = "../types"
version = "=4.0.0"
default-features = false
features = [ "field", "group", "scalar" ]

[dependencies.snarkvm-curves]
path = "../../curves"
version = "=4.0.0"
default-features = false

[dependencies.snarkvm-parameters]
path = "../../parameters"
version = "=4.0.0"

[dependencies.anyhow]
version = "1.0.73"

[dependencies.indexmap]
version = "2"

[dependencies.lazy_static]
version = "1.4"

[dependencies.once_cell]
version = "1.18"

[dependencies.serde]
version = "1.0"

[dependencies.paste]
version = "1.0"

[package.metadata.cargo-machete]
ignored = ["paste"]
