[package]
name = "snarkvm-console-network"
version = "4.3.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Network console library for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2024"

[features]
filesystem = [ "snarkvm-parameters/filesystem" ]
wasm = [
  "snarkvm-parameters/wasm"
]
test = [ ]
test_targets = [ ]
test_consensus_heights = [ ]

[dependencies.snarkvm-algorithms]
workspace = true

[dependencies.snarkvm-console-algorithms]
workspace = true

[dependencies.snarkvm-console-collections]
workspace = true

[dependencies.snarkvm-console-network-environment]
workspace = true

[dependencies.snarkvm-console-types]
workspace = true
features = [ "field", "group", "scalar" ]

[dependencies.snarkvm-curves]
workspace = true

[dependencies.snarkvm-parameters]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.enum-iterator]
workspace = true

[dependencies.indexmap]
workspace = true

[dependencies.lazy_static]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.paste]
workspace = true

[package.metadata.cargo-machete]
ignored = ["paste"]
