[package]
name = "snarkvm-console-program"
version = "4.2.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Program operations for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2024"

[features]
default = [ ]
test = [ ]
dev-print = [ "snarkvm-utilities/dev-print" ]

[dependencies.snarkvm-console-account]
workspace = true

[dependencies.snarkvm-console-algorithms]
workspace = true

[dependencies.snarkvm-console-collections]
workspace = true

[dependencies.snarkvm-console-network]
workspace = true

[dependencies.snarkvm-console-types]
workspace = true
features = [ "string" ]

[dependencies.snarkvm-utilities]
workspace = true

[dependencies.enum_index]
version = "0.2"

[dependencies.enum_index_derive]
version = "0.2"

[dependencies.enum-iterator]
workspace = true

[dependencies.indexmap]
workspace = true

[dependencies.num-derive]
version = "0.4"

[dependencies.num-traits]
workspace = true

[dependencies.serde_json]
workspace = true
features = [ "preserve_order" ]

[dependencies.seq-macro]
version = "0.3"

[dev-dependencies.bincode]
workspace = true
