[package]
name = "snarkvm-console-types"
version = "4.2.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Console types for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
license = "Apache-2.0"
edition = "2024"

[[bench]]
name = "group"
path = "benches/group.rs"
harness = false

[dependencies.snarkvm-console-network-environment]
workspace = true

[dependencies.snarkvm-console-types-address]
workspace = true
optional = true

[dependencies.snarkvm-console-types-boolean]
workspace = true
optional = true

[dependencies.snarkvm-console-types-field]
workspace = true
optional = true

[dependencies.snarkvm-console-types-group]
workspace = true
optional = true

[dependencies.snarkvm-console-types-integers]
workspace = true
optional = true

[dependencies.snarkvm-console-types-scalar]
workspace = true
optional = true

[dependencies.snarkvm-console-types-string]
workspace = true
optional = true

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.snarkvm-console-network]
path = "../network"

[features]
default = [
  "address",
  "boolean",
  "field",
  "group",
  "integers",
  "scalar",
  "string"
]
address = [
  "snarkvm-console-types-address",
  "snarkvm-console-types-field",
  "snarkvm-console-types-group"
]
boolean = [ "snarkvm-console-types-boolean" ]
field = [ "snarkvm-console-types-field" ]
group = [
  "snarkvm-console-types-group",
  "snarkvm-console-types-field",
  "snarkvm-console-types-scalar"
]
integers = [ "snarkvm-console-types-integers" ]
scalar = [
  "snarkvm-console-types-scalar",
  "snarkvm-console-types-field"
]
string = [
  "snarkvm-console-types-string",
  "snarkvm-console-types-field",
  "snarkvm-console-types-integers"
]
serial = [ "snarkvm-console-network-environment/serial" ]
