[package]
name = "snarkvm-ledger-authority"
version = "3.8.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Data structures for a block authority in a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = [ ]
serial = [ "snarkvm-console/serial" ]
wasm = [ "snarkvm-console/wasm" ]
test-helpers = [ "snarkvm-ledger-narwhal-subdag/test-helpers" ]

[dependencies.snarkvm-console]
workspace = true
features = [ "default" ]

[dependencies.snarkvm-ledger-narwhal-subdag]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.serde_json]
workspace = true
features = [ "preserve_order" ]

[dev-dependencies.bincode]
workspace = true

[dev-dependencies.snarkvm-ledger-authority]
path = "."
features = [ "test-helpers" ]
