[package]
name = "snarkvm-ledger-block"
version = "4.1.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A block for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "web-programming" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ "indexmap/rayon" ]
serial = [
  "snarkvm-console/serial",
  "snarkvm-ledger-authority/serial",
  "snarkvm-ledger-puzzle/serial",
  "snarkvm-ledger-committee/serial",
  "snarkvm-synthesizer-program/serial",
  "snarkvm-synthesizer-snark/serial"
]
wasm = [
  "snarkvm-console/wasm",
  "snarkvm-ledger-authority/wasm",
  "snarkvm-ledger-puzzle/wasm",
  "snarkvm-ledger-committee/wasm",
  "snarkvm-synthesizer-program/wasm",
  "snarkvm-synthesizer-snark/wasm"
]
test = [ "snarkvm-synthesizer-process/test" ]

[dependencies.snarkvm-console]
workspace = true

[dependencies.snarkvm-ledger-authority]
workspace = true

[dependencies.snarkvm-ledger-committee]
workspace = true

[dependencies.snarkvm-ledger-narwhal-batch-header]
workspace = true

[dependencies.snarkvm-ledger-narwhal-data]
workspace = true

[dependencies.snarkvm-ledger-narwhal-subdag]
workspace = true

[dependencies.snarkvm-ledger-narwhal-transmission-id]
workspace = true

[dependencies.snarkvm-ledger-puzzle]
workspace = true

[dependencies.snarkvm-synthesizer-program]
workspace = true

[dependencies.snarkvm-synthesizer-snark]
workspace = true

[dependencies.indexmap]
workspace = true
features = [ "serde" ]

[dependencies.rayon]
workspace = true

[dependencies.serde_json]
workspace = true
features = [ "preserve_order" ]

[dev-dependencies.aleo-std]
workspace = true
features = [ "storage" ]

[dev-dependencies.bincode]
workspace = true

[dev-dependencies.snarkvm-algorithms]
workspace = true

[dev-dependencies.snarkvm-circuit]
workspace = true

[dev-dependencies.snarkvm-console]
workspace = true
features = [ "filesystem" ]

[dev-dependencies.snarkvm-ledger-committee]
workspace = true
features = [ "test-helpers" ]

[dev-dependencies.snarkvm-ledger-narwhal-batch-header]
workspace = true

[dev-dependencies.snarkvm-ledger-query]
path = "../query"
features = [ "query" ]

[dev-dependencies.snarkvm-ledger-store]
path = "../store"

[dev-dependencies.snarkvm-synthesizer-process]
path = "../../synthesizer/process"
