[package]
name = "snarkvm-ledger-committee"
version = "4.1.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A committee for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ ]
serial = [ "snarkvm-console/serial" ]
wasm = [ "snarkvm-console/wasm" ]
metrics = [ "dep:snarkvm-metrics" ]
prop-tests = [ "rand", "rand_chacha", "test-strategy", "proptest", "anyhow" ]
test-helpers = [ "prop-tests", "rand_distr" ]

[dependencies.snarkvm-console]
workspace = true

[dependencies.snarkvm-ledger-narwhal-batch-header]
workspace = true

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.snarkvm-metrics]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
features = [ "preserve_order" ]

[dependencies.anyhow]
workspace = true
optional = true

[dependencies.proptest]
version = "1.0.0"
optional = true

[dependencies.rand]
workspace = true
optional = true

[dependencies.rand_chacha]
workspace = true
optional = true

[dependencies.rand_distr]
version = "0.4"
optional = true

[dependencies.rayon]
workspace = true

[dependencies.test-strategy]
version = "0.3.1"
optional = true

[dev-dependencies.bincode]
workspace = true

[dev-dependencies.parking_lot]
workspace = true

[dev-dependencies.rand_distr]
version = "0.4"

[dev-dependencies.rayon]
workspace = true

[dev-dependencies.snarkvm-ledger-committee]
path = "."
features = [ "prop-tests" ]
