[package]
name = "snarkvm-ledger-narwhal"
version = "4.5.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Data structures for a Narwhal-style memory pool in a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [
  "batch-certificate",
  "batch-header",
  "data",
  "subdag",
  "transmission",
  "transmission-id"
]
async = [ "snarkvm-ledger-narwhal-data/async" ]
serial = [
  "snarkvm-ledger-narwhal-batch-certificate/serial",
  "snarkvm-ledger-narwhal-batch-header/serial",
  "snarkvm-ledger-narwhal-subdag/serial",
  "snarkvm-ledger-narwhal-transmission/serial",
  "snarkvm-ledger-narwhal-transmission-id/serial"
]
wasm = [
  "snarkvm-ledger-narwhal-batch-certificate/wasm",
  "snarkvm-ledger-narwhal-batch-header/wasm",
  "snarkvm-ledger-narwhal-subdag/wasm",
  "snarkvm-ledger-narwhal-transmission/wasm",
  "snarkvm-ledger-narwhal-transmission-id/wasm"
]
test-helpers = [
  "snarkvm-ledger-narwhal-batch-certificate/test-helpers",
  "snarkvm-ledger-narwhal-batch-header/test-helpers",
  "snarkvm-ledger-narwhal-subdag/test-helpers",
  "snarkvm-ledger-narwhal-transmission/test-helpers",
  "snarkvm-ledger-narwhal-transmission-id/test-helpers"
]
batch-certificate = [ "snarkvm-ledger-narwhal-batch-certificate" ]
batch-header = [ "snarkvm-ledger-narwhal-batch-header" ]
data = [ "snarkvm-ledger-narwhal-data" ]
subdag = [ "snarkvm-ledger-narwhal-subdag" ]
transmission = [ "snarkvm-ledger-narwhal-transmission" ]
transmission-id = [ "snarkvm-ledger-narwhal-transmission-id" ]

[dependencies.snarkvm-ledger-narwhal-batch-certificate]
workspace = true
optional = true

[dependencies.snarkvm-ledger-narwhal-batch-header]
workspace = true
optional = true

[dependencies.snarkvm-ledger-narwhal-data]
workspace = true
optional = true

[dependencies.snarkvm-ledger-narwhal-subdag]
workspace = true
optional = true

[dependencies.snarkvm-ledger-narwhal-transmission]
workspace = true
optional = true

[dependencies.snarkvm-ledger-narwhal-transmission-id]
workspace = true
optional = true

[dev-dependencies.snarkvm-ledger-narwhal]
path = "."
features = [ "test-helpers" ]
