[package]
name = "snarkvm-ledger-puzzle"
version = "4.1.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Puzzle for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2024"

[[bench]]
name = "puzzle"
path = "benches/puzzle.rs"
harness = false
required-features = [ "setup" ]

[features]
default = [ "indexmap/rayon", "rayon" ]
cuda = [ "snarkvm-algorithms/cuda" ]
locktick = [ "dep:locktick", "snarkvm-algorithms/locktick" ]
serial = [ "snarkvm-console/serial", "snarkvm-algorithms/serial" ]
setup = [ ]
timer = [ "aleo-std/timer" ]
wasm = [ "snarkvm-console/wasm" ]

[dependencies.snarkvm-console]
workspace = true

[dependencies.snarkvm-algorithms]
workspace = true

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.bincode]
workspace = true

[dependencies.indexmap]
workspace = true
features = [ "serde", "rayon" ]

[dependencies.locktick]
workspace = true
features = [ "parking_lot" ]
optional = true

[dependencies.lru]
workspace = true

[dependencies.parking_lot]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.rand_chacha]
workspace = true

[dependencies.rayon]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
features = [ "preserve_order" ]

[dev-dependencies.snarkvm-console]
workspace = true
features = [ "test", "default" ]

[dev-dependencies.criterion]
workspace = true

[dev-dependencies.rand]
workspace = true

[dev-dependencies.snarkvm-ledger-puzzle-epoch]
path = "epoch"
