[package]
name = "snarkvm-ledger-query"
version = "3.8.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A query for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "web-programming" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ "query" ]
async = [ "dep:reqwest" ]
serial = [
  "snarkvm-console/serial",
  "snarkvm-ledger-store/serial",
  "snarkvm-synthesizer-program/serial"
]
wasm = [
  "snarkvm-console/wasm",
  "snarkvm-ledger-store/wasm",
  "snarkvm-synthesizer-program/wasm"
]
query = [
  "dep:snarkvm-ledger-store",
  "dep:snarkvm-synthesizer-program",
  "dep:ureq",
]

[dependencies.snarkvm-console]
workspace = true
features = [ "default" ]

[dependencies.snarkvm-ledger-store]
workspace = true
optional = true

[dependencies.snarkvm-synthesizer-program]
workspace = true
optional = true

[dependencies.async-trait]
version = "0.1"

[dependencies.reqwest]
version = "0.12"
features = [ "json" ]
optional = true

[dependencies.ureq]
workspace = true
features = [ "json" ]
optional = true
