[package]
name = "snarkvm-ledger-query"
version = "4.0.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A query for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "web-programming" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = [ "query" ]
async = [ "dep:reqwest" ]
serial = [
  "console/serial",
  "ledger-store/serial",
  "synthesizer-program/serial"
]
wasm = [
  "console/wasm",
  "ledger-store/wasm",
  "synthesizer-program/wasm"
]
query = [
  "dep:ledger-store",
  "dep:synthesizer-program",
  "dep:ureq",
  "dep:http"
]

[dependencies.console]
package = "snarkvm-console"
path = "../../console"
version = "=4.0.0"

[dependencies.ledger-store]
package = "snarkvm-ledger-store"
path = "../store"
version = "=4.0.0"
optional = true

[dependencies.synthesizer-program]
package = "snarkvm-synthesizer-program"
path = "../../synthesizer/program"
version = "=4.0.0"
optional = true

[dependencies.async-trait]
version = "0.1"

[dependencies.reqwest]
version = "0.12"
features = [ "json" ]
optional = true

[dependencies.ureq]
workspace = true
features = [ "json" ]
optional = true

[dependencies.http]
version = "1"
optional = true
