[package]
name = "snarkvm-ledger-store"
version = "4.3.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A data store for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "web-programming" ]
license = "Apache-2.0"
edition = "2024"

[features]
default = [ "indexmap/rayon" ]
locktick = [ "dep:locktick", "snarkvm-ledger-puzzle/locktick" ]
rocks = [ "rocksdb", "smallvec" ]
serial = [
  "snarkvm-console/serial",
  "snarkvm-ledger-block/serial",
  "snarkvm-ledger-puzzle/serial",
  "snarkvm-ledger-committee/serial",
  "snarkvm-synthesizer-program/serial",
  "snarkvm-synthesizer-snark/serial"
]
wasm = [
  "snarkvm-console/wasm",
  "snarkvm-ledger-authority/wasm",
  "snarkvm-ledger-block/wasm",
  "snarkvm-ledger-puzzle/wasm",
  "snarkvm-ledger-committee/wasm",
  "snarkvm-ledger-narwhal-batch-certificate/wasm",
  "snarkvm-synthesizer-program/wasm",
  "snarkvm-synthesizer-snark/wasm"
]
test = [ ]

[dependencies.snarkvm-console]
workspace = true

[dependencies.snarkvm-ledger-authority]
workspace = true

[dependencies.snarkvm-ledger-block]
workspace = true

[dependencies.snarkvm-ledger-committee]
workspace = true

[dependencies.snarkvm-ledger-narwhal-batch-certificate]
workspace = true

[dependencies.snarkvm-ledger-puzzle]
workspace = true

[dependencies.snarkvm-synthesizer-program]
workspace = true

[dependencies.snarkvm-synthesizer-snark]
workspace = true

[dependencies.snarkvm-utilities]
workspace = true

[dependencies.aleo-std-storage]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.bincode]
workspace = true

[dependencies.indexmap]
workspace = true
features = [ "serde" ]

[dependencies.locktick]
workspace = true
features = [ "parking_lot" ]
optional = true

[dependencies.parking_lot]
workspace = true

[dependencies.rayon]
workspace = true

[dependencies.rocksdb]
version = "0.21"
default-features = false
features = [ "lz4" ]
optional = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true
features = [ "preserve_order" ]

[dependencies.smallvec]
workspace = true
features = [ "write" ]
optional = true

[dev-dependencies.aleo-std]
workspace = true

[dev-dependencies.snarkvm-ledger-block]
workspace = true

[dev-dependencies.snarkvm-ledger-committee]
workspace = true
features = [ "test-helpers" ]

[dev-dependencies.snarkvm-ledger-test-helpers]
path = "../../ledger/test-helpers"

[dev-dependencies.tempfile]
workspace = true

[dev-dependencies.tracing-test]
version = "0.2.5"

[dev-dependencies.tracing]
workspace = true
