[package]
name = "snarkvm-ledger-test-helpers"
version = "3.7.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Test helpers for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "web-programming" ]
license = "Apache-2.0"
edition = "2021"

[dependencies.algorithms]
package = "snarkvm-algorithms"
path = "../../algorithms"
version = "=3.7.1"

[dependencies.console]
package = "snarkvm-console"
path = "../../console"
version = "=3.7.1"

[dependencies.circuit]
package = "snarkvm-circuit"
path = "../../circuit"
version = "=3.7.1"

[dependencies.ledger-block]
package = "snarkvm-ledger-block"
path = "../block"
version = "=3.7.1"

[dependencies.ledger-query]
package = "snarkvm-ledger-query"
path = "../query"
version = "=3.7.1"
default-features = false
features = [ "query" ]

[dependencies.ledger-store]
package = "snarkvm-ledger-store"
path = "../store"
version = "=3.7.1"

[dependencies.synthesizer-program]
package = "snarkvm-synthesizer-program"
path = "../../synthesizer/program"
version = "=3.7.1"

[dependencies.synthesizer-process]
package = "snarkvm-synthesizer-process"
path = "../../synthesizer/process"
version = "=3.7.1"

[dependencies.aleo-std]
version = "1.0.1"
features = [ "storage" ]

[dependencies.once_cell]
version = "1.18"
