[package]
name = "snarkvm-ledger-test-helpers"
version = "4.1.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Test helpers for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "web-programming" ]
license = "Apache-2.0"
edition = "2024"

[dependencies.snarkvm-algorithms]
workspace = true

[dependencies.snarkvm-console]
workspace = true
features = ["filesystem"]

[dependencies.snarkvm-circuit]
workspace = true

[dependencies.snarkvm-ledger-block]
workspace = true

[dependencies.snarkvm-ledger-query]
workspace = true
features = [ "query" ]

[dependencies.snarkvm-ledger-store]
workspace = true

[dependencies.snarkvm-synthesizer-program]
workspace = true

[dependencies.snarkvm-synthesizer-process]
workspace = true

[dependencies.aleo-std]
workspace = true
features = [ "storage" ]
