[package]
name = "snarkvm-testchain-generator"
version = "0.1.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A testchain generator for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/ProvableHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "web-programming" ]
license = "Apache-2.0"
edition = "2024"
include = ["../../LICENSE.md"]

[features]
default = [ ]
test_targets = [ "snarkvm-ledger/test_targets"]
test = [ "snarkvm-ledger/test" ]

[dependencies.aleo-std]
workspace = true

[dependencies.snarkvm-console]
workspace = true

[dependencies.snarkvm-ledger]
workspace = true
features = [ "test-helpers", "rocks" ]

[dependencies.anyhow]
workspace = true

[dependencies.tracing-subscriber]
version = "0.3"

[dependencies.clap]
version = "4"
features = [ "color", "help", "derive" ]
